--- a/PoolParty/PoolParty.vcxproj
+++ b/PoolParty/PoolParty.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="PoolParty.hpp" />
     <ClInclude Include="ThreadPool.hpp" />
     <ClInclude Include="WinApi.hpp" />
+    <ClInclude Include="Words.h" />
     <ClInclude Include="WorkerFactory.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -35,6 +36,7 @@
     <ClCompile Include="PoolParty.cpp" />
     <ClCompile Include="ThreadPool.cpp" />
     <ClCompile Include="WinApi.cpp" />
+    <ClCompile Include="Words.cpp" />
     <ClCompile Include="WorkerFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -154,12 +156,18 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <DebugInformationFormat>None</DebugInformationFormat>
+      <Optimization>Full</Optimization>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <StringPooling>true</StringPooling>
+      <ExceptionHandling>false</ExceptionHandling>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
