--- a/PoolParty/PoolParty.vcxproj.filters
+++ b/PoolParty/PoolParty.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="HandleHijacker.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Words.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThreadPool.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HandleHijacker.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Words.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
